[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "B", "I", "SIM", "PERF", "RUF"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["src"]

[project]
name = "httpx-mirror"
version = "1.0"

[project.optional-dependencies]
dev = [
    "ruff",
]
